--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -60,7 +60,55 @@
         </div>
     </nav>    
     <h2 data-aos="flip-right" class="titulos">Galería</h2>
-    <main class="contenedorFotos">
+
+    <main class="sections">
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="6"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="7"></button>
+              <button type="button" data-bs-target="#demo" data-bs-slide-to="8"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../media/images/galeria/foto_1.jpg" alt="Foto 1" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="../media/images/galeria/foto_2.jpg" alt="Foto 2" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="../media/images/galeria/foto_3.jpg" alt="Foto 3" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="../media/images/galeria/foto_4.jpg" alt="Foto 4" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="../media/images/galeria/foto_5.jpg" alt="Foto 5" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="../media/images/galeria/foto_6.jpg" alt="Foto 6" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="../media/images/galeria/foto_7.jpg" alt="Foto 7" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="../media/images/galeria/foto_8.jpg" alt="Foto 8" class="d-block w-100">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </button>
+          </div>
+    </main>
+    <section class="contenedorFotos">
         <div class="foto foto1"><img src="../media/images/galeria/foto_1.jpg" width="100%" height="100%" alt="foto1"></div>
         <div class="foto foto2"><img src="../media/images/galeria/foto_2.jpg" width="100%" height="100%" alt="foto2"></div>
         <div class="foto foto3"><img src="../media/images/galeria/foto_3.jpg" width="100%" height="100%" alt="foto3"></div>
@@ -69,7 +117,7 @@
         <div class="foto foto6"><img src="../media/images/galeria/foto_6.jpg" width="100%" height="100%" alt="foto6"></div>
         <div class="foto foto7"><img src="../media/images/galeria/foto_7.jpg" width="100%" height="100%" alt="foto7"></div>
         <div class="foto foto8"><img src="../media/images/galeria/foto_8.jpg" width="100%" height="100%" alt="foto8"></div>
-    </main>
+    </section>
     <footer class="container-fluid">
         <div class="row justify-content-around">
             <nav class="col-12 col-md-5 col-lg-3">
