--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="blog.css">
+    <meta name="keywords" content="dentista,ondontologos,Corrientes,clinica dental,dientes,encias,cuidado bucal,clinica odontologica,odontologia,dentista Corrientes,rebeca toledo dentista,rebeca toledo,odontologo Corrientes,dentistas en Corrientes,buscar,buscar dentista,buscar clinica odontologica,Corrientes dentitas,Corrientes ondontologos">
+    <meta name="description" content="Blog de odontología. Rebeca Toledo: Corrientes, Argentina.">
     <link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico?">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -31,7 +33,7 @@
             </div>
             <div class="row text-center">
                 <div class="logo">
-                    <a href="../index.html">Rebeca Toledo</a>
+                    <a href="../index.html"><h1>Rebeca Toledo</h1></a>
                 </div>
             </div>
         </div>
