--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta name="keywords" content="galeria, fotos de dientes, dentista,ondontologos,Corrientes,clinica dental,dientes,encias,cuidado bucal,clinica odontologica,odontologia,dentista Corrientes,rebeca toledo dentista,rebeca toledo,odontologo Corrientes,dentistas en Corrientes,buscar,buscar dentista,buscar clinica odontologica,Corrientes dentitas,Corrientes ondontologos">
+    <meta name="description" content="Galería de fotos de la odontóloga Rebeca Toledo. Corrientes, Argentina.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico?">
@@ -29,7 +31,7 @@
             </div>
             <div class="row text-center">
                 <div class="logo">
-                    <a href="../index.html">Rebeca Toledo</a>
+                  <a href="../index.html"><h1>Rebeca Toledo</h1></a>
                 </div>
             </div>
         </div>
