--- a/pages/resenas.html
+++ b/pages/resenas.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta name="keywords" content="dentista,ondontologos,Corrientes,clinica dental,dientes,encias,cuidado bucal,clinica odontologica,odontologia,dentista Corrientes,rebeca toledo dentista,rebeca toledo,odontologo Corrientes,dentistas en Corrientes,buscar,buscar dentista,buscar clinica odontologica,Corrientes dentitas,Corrientes ondontologos">
+    <meta name="description" content="Reseñas a la dentista Rebeca Toledo. Ubicada en Corrientes, Argentina.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico?">
@@ -28,7 +30,7 @@
             </div>
             <div class="row text-center">
                 <div class="logo">
-                    <a href="../index.html">Rebeca Toledo</a>
+                    <a href="../index.html"><h1>Rebeca Toledo</h1></a>
                 </div>
             </div>
         </div>
